Fix all lint possible, the remained need to be still considered

--- a/app/src/main/res/layout/edit_reservation_popup.xml
+++ b/app/src/main/res/layout/edit_reservation_popup.xml
@@ -1,19 +1,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="#6666"
     android:isScrollContainer="false">
 
     <FrameLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:background="#fff">
 
         <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:background="@color/ReserveBackground"
             android:padding="10dp">
 
@@ -24,7 +24,8 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
-                android:background="@drawable/close_button_states" />
+                android:background="@drawable/close_button_states"
+                android:contentDescription="@string/cancel_reservation" />
 
             <TextView
                 android:id="@+id/textView1"
