--- a/app/src/main/res/layout/reservation_popup.xml
+++ b/app/src/main/res/layout/reservation_popup.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/container_reservation_popup"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_gravity="center"
     android:background="#6666"
     android:isScrollContainer="false">
@@ -15,7 +15,7 @@
 
         <com.futurice.android.reservator.view.LobbyReservationRowView
             android:id="@+id/roomReservationView1"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@drawable/popup_background"
