--- a/app/src/main/res/layout/room_activity.xml
+++ b/app/src/main/res/layout/room_activity.xml
@@ -1,30 +1,31 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="fill_parent"
-             android:layout_height="fill_parent">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:background="#fff"
         android:padding="10dip">
 
         <com.futurice.android.reservator.view.WeekView
-            android:layout_width="fill_parent"
             android:id="@+id/weekView1"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_below="@+id/roomNameLabel"
+            android:layout_marginBottom="0dp"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:layout_marginBottom="0dp"
             android:layout_marginTop="10dp">
 
             <FrameLayout
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_marginRight="10dp"
+                android:id="@+id/frameLayout1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_marginBottom="0dp"
-                android:id="@+id/frameLayout1" />
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp" />
         </com.futurice.android.reservator.view.WeekView>
 
         <TextView
@@ -32,26 +33,30 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:textColor="@color/TextColor"
+            android:textIsSelectable="false"
             android:textSize="20sp"
-            android:textStyle="bold"
-            android:textIsSelectable="false"/>
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/seeAllRoomsButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignRight="@+id/roomNameLabel"
+            android:layout_alignEnd="@+id/roomNameLabel"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
+            android:layout_alignRight="@+id/roomNameLabel"
+            android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
             android:background="@drawable/button_background"
             android:text="@string/seeAllRooms"
-            android:textColor="#fff"/>
+            android:textColor="@android:color/white" />
     </RelativeLayout>
 
     <com.futurice.android.reservator.view.RoomTrafficLights
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_gravity="center"
-        android:id="@+id/roomTrafficLights"/>
-</FrameLayout>
+        android:id="@+id/roomTrafficLights"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center" />
+</merge>
