--- a/app/src/main/res/layout/lobby_reservation_row.xml
+++ b/app/src/main/res/layout/lobby_reservation_row.xml
@@ -7,22 +7,24 @@
     android:gravity="center_vertical">
 
     <LinearLayout
-        android:layout_width="150dp"
+        android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginEnd="20dp"
-        android:layout_marginLeft="120dp"
+        android:layout_marginLeft="100dp"
         android:layout_marginRight="20dp"
-        android:layout_marginStart="120dp"
+        android:layout_marginStart="100dp"
         android:orientation="horizontal">
 
         <ImageView
+            android:layout_gravity="center_horizontal|top"
             android:id="@+id/roomDefaultIcon"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
-            android:src="@android:drawable/ic_notification_overlay" />
+            android:src="@android:drawable/ic_notification_overlay"
+            android:contentDescription="@string/default_room_icon_content_description" />
 
 
         <LinearLayout
@@ -79,7 +81,7 @@
                 android:layout_gravity="center"
                 android:layout_marginLeft="20dp"
                 android:layout_marginStart="20dp"
-                android:layout_weight="60"
+                android:layout_weight="50"
                 android:background="@drawable/button_background"
                 android:focusable="true"
                 android:text="@string/book_now"
@@ -92,7 +94,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="20dp"
                 android:layout_marginStart="20dp"
-                android:layout_weight="30"
+                android:layout_weight="40"
                 android:minWidth="100dp"
                 tools:text="&lt;status&gt;" />
 
@@ -102,18 +104,17 @@
                 android:layout_height="24dp"
                 android:layout_gravity="center_vertical|start"
                 android:background="@drawable/calendar_small_grey"
-                android:focusable="true"
-                android:visibility="visible" />
+                android:focusable="true" />
         </LinearLayout>
 
         <LinearLayout
-            android:paddingBottom="8dp"
             android:id="@+id/bookingMode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:gravity="center_vertical"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="8dp">
 
             <ImageButton
                 android:id="@+id/cancelButton"
@@ -153,6 +154,7 @@
                 android:textColor="@color/button_color" />
 
             <TextView
+                android:layout_gravity="center"
                 android:id="@+id/hintText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
