--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:background="#fff"
                 android:gravity="center"
                 android:padding="0dip">
