Added formatting to the clock.

--- a/app/src/main/res/layout/room_traffic_lights.xml
+++ b/app/src/main/res/layout/room_traffic_lights.xml
@@ -16,15 +16,7 @@
         android:textSize="40sp"
         android:textStyle="bold" />
 
-    <DigitalClock
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:textColor="@color/TrafficLightText"
-        android:textSize="40sp"
-        android:textStyle="bold"/>
+    <include layout="@layout/clock" />
 
     <RelativeLayout
         android:layout_width="match_parent"
