And so begins the long, arduous process of making the UI not a flaming pile of garbage.

--- a/app/src/main/res/layout/edit_reservation_popup.xml
+++ b/app/src/main/res/layout/edit_reservation_popup.xml
@@ -31,9 +31,16 @@
                 android:id="@+id/textView1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
-                android:layout_toLeftOf="@id/cancelButton"
+                android:layout_marginStart="62dp"
+                android:layout_marginLeft="62dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="54dp"
+                android:layout_marginRight="54dp"
                 android:layout_toStartOf="@id/cancelButton"
+                android:layout_toLeftOf="@id/cancelButton"
                 android:gravity="center"
                 android:text="@string/reservationCancelInfo"
                 android:textColor="#333" />
