--- a/app/src/main/res/layout/lobby_activity.xml
+++ b/app/src/main/res/layout/lobby_activity.xml
@@ -24,6 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:padding="16dp" />
+        android:padding="16dp"
+        android:textColor="@color/TrafficLightReserved" />
 
 </LinearLayout>
