--- a/app/src/main/res/layout/room_activity.xml
+++ b/app/src/main/res/layout/room_activity.xml
@@ -30,28 +30,31 @@
 
         <TextView
             android:id="@+id/roomNameLabel"
-            android:layout_width="match_parent"
+            android:layout_width="1088dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
+            android:layout_marginStart="182dp"
+            android:layout_marginLeft="182dp"
             android:textColor="@color/TextColor"
             android:textIsSelectable="false"
             android:textSize="20sp"
             android:textStyle="bold" />
 
-        <!-- <Button
-            android:id="@+id/seeAllRoomsButton"
+        <Button
+            android:id="@+id/backToMain"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/roomNameLabel"
             android:layout_alignEnd="@+id/roomNameLabel"
+            android:layout_alignRight="@+id/roomNameLabel"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_alignRight="@+id/roomNameLabel"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginEnd="1099dp"
+            android:layout_marginRight="1099dp"
             android:background="@drawable/button_background"
-            android:text="@string/seeAllRooms"
-            android:textColor="@android:color/white" /> -->
+            android:text="@string/toMain"
+            android:textColor="@android:color/white" />
     </RelativeLayout>
 
     <com.futurice.android.reservator.view.RoomTrafficLights
