--- a/app/src/main/res/layout/room_status_fragment.xml
+++ b/app/src/main/res/layout/room_status_fragment.xml
@@ -40,7 +40,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/statusUtilText"
+                android:id="@+id/statusUntilText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/roomStatusInfo"
@@ -55,7 +55,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/roomStatus" />
+                app:layout_constraintTop_toBottomOf="@+id/statusText" />
 
             <TextView
                 android:id="@+id/meetingNameText"
@@ -72,7 +72,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.6"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/reservationInfo" />
+                app:layout_constraintTop_toBottomOf="@+id/statusUntilText" />
 
         </android.support.constraint.ConstraintLayout>
     </android.support.constraint.ConstraintLayout>
