--- a/app/src/main/res/layout/traffic_lights_activity.xml
+++ b/app/src/main/res/layout/traffic_lights_activity.xml
@@ -33,7 +33,7 @@
 
             <fragment
                 android:id="@+id/roomReserveFragment"
-                android:name="com.futurice.android.reservator.view.trafficlightsactivity.RoomReserveFragment"
+                android:name="com.futurice.android.reservator.view.trafficlightsactivity.RoomReservationFragment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
