--- a/app/src/main/res/layout/traffic_lights_activity.xml
+++ b/app/src/main/res/layout/traffic_lights_activity.xml
@@ -32,7 +32,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <fragment
-                android:id="@+id/roomReserveFragment"
+                android:id="@+id/roomReservationFragment"
                 android:name="com.futurice.android.reservator.view.trafficlightsactivity.RoomReservationFragment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
